@@ -23,24 +23,14 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import com.jayway.jsonpath.Configuration;
 import com.jayway.jsonpath.JsonPath;
 import com.jayway.jsonpath.Option;
-import jakarta.ws.rs.ProcessingException;
-import jakarta.ws.rs.client.Client;
-import jakarta.ws.rs.client.ClientBuilder;
-import jakarta.ws.rs.client.Entity;
-import jakarta.ws.rs.client.Invocation;
-import jakarta.ws.rs.client.WebTarget;
-import jakarta.ws.rs.core.MediaType;
-import jakarta.ws.rs.core.MultivaluedHashMap;
-import jakarta.ws.rs.core.MultivaluedMap;
-import jakarta.ws.rs.core.Response;
-import jakarta.ws.rs.core.UriBuilder;
 import java.io.FileInputStream;
 import java.io.FileNotFoundException;
 import java.io.IOException;
-import java.io.InputStream;
 import java.io.StringReader;
 import java.io.StringWriter;
 import java.net.URI;
+import java.net.URISyntaxException;
+import java.net.URLEncoder;
 import java.nio.charset.Charset;
 import java.nio.charset.StandardCharsets;
 import java.security.KeyManagementException;
@@ -68,7 +58,16 @@ import javax.xml.xpath.XPath;
 import javax.xml.xpath.XPathConstants;
 import javax.xml.xpath.XPathExpression;
 import javax.xml.xpath.XPathFactory;
-import org.apache.commons.lang3.StringUtils;
+import org.apache.hc.client5.http.classic.methods.HttpUriRequestBase;
+import org.apache.hc.client5.http.impl.classic.CloseableHttpClient;
+import org.apache.hc.core5.http.ClassicHttpResponse;
+import org.apache.hc.core5.http.ContentType;
+import org.apache.hc.core5.http.Header;
+import org.apache.hc.core5.http.HttpEntity;
+import org.apache.hc.core5.http.io.entity.ByteArrayEntity;
+import org.apache.hc.core5.http.io.entity.EntityUtils;
+import org.apache.hc.core5.http.io.entity.StringEntity;
+import org.apache.hc.core5.net.URIBuilder;
 import org.apache.hop.core.Const;
 import org.apache.hop.core.encryption.Encr;
 import org.apache.hop.core.exception.HopException;
@@ -85,18 +84,15 @@ import org.apache.hop.lineage.model.HttpDirection;
 import org.apache.hop.lineage.model.HttpLineagePayload;
 import org.apache.hop.metadata.rest.RestConnection;
 import org.apache.hop.metadata.rest.RestPaginationType;
+import org.apache.hop.metadata.rest.client.RestAuthType;
+import org.apache.hop.metadata.rest.client.RestAuthenticator;
+import org.apache.hop.metadata.rest.client.RestClientFactory;
+import org.apache.hop.metadata.rest.client.RestClientSettings;
 import org.apache.hop.pipeline.Pipeline;
 import org.apache.hop.pipeline.PipelineMeta;
 import org.apache.hop.pipeline.transform.BaseTransform;
 import org.apache.hop.pipeline.transform.TransformMeta;
 import org.apache.hop.pipeline.transforms.rest.common.RestConst;
-import org.glassfish.jersey.apache5.connector.Apache5ConnectorProvider;
-import org.glassfish.jersey.client.ClientConfig;
-import org.glassfish.jersey.client.ClientProperties;
-import org.glassfish.jersey.client.HttpUrlConnectorProvider;
-import org.glassfish.jersey.client.RequestEntityProcessing;
-import org.glassfish.jersey.client.authentication.HttpAuthenticationFeature;
-import org.glassfish.jersey.uri.UriComponent;
 import org.json.simple.JSONObject;
 import org.w3c.dom.Document;
 import org.w3c.dom.NodeList;
@@ -108,6 +104,8 @@ public class Rest extends BaseTransform<RestMeta, RestData> {
       "Rest.Exception.ErrorFindingField";
   private String baseUrl = "";
   private RestConnection connection;
+  private RestClientSettings clientSettings;
+  private RestAuthenticator authenticator;
 
   private static final Configuration JSON_PATH_CONFIGURATION =
       Configuration.builder()
@@ -132,7 +130,7 @@ public class Rest extends BaseTransform<RestMeta, RestData> {
     final int status;
     final long responseTimeMs;
     final String headerJson;
-    final MultivaluedMap<String, Object> headers;
+    final Map<String, List<String>> headers;
 
     /** Effective request URL for this exchange (after paging merge), used for Link-header dedup. */
     final String requestUrl;
@@ -143,7 +141,7 @@ public class Rest extends BaseTransform<RestMeta, RestData> {
         int status,
         long responseTimeMs,
         String headerJson,
-        MultivaluedMap<String, Object> headers,
+        Map<String, List<String>> headers,
         String requestUrl) {
       this.body = body;
       this.bodyBytes = bodyBytes;
@@ -177,22 +175,33 @@ public class Rest extends BaseTransform<RestMeta, RestData> {
     super(transformMeta, meta, data, copyNr, pipelineMeta, pipeline);
   }
 
-  protected ClientBuilder createClientBuilder() {
-    return ClientBuilder.newBuilder();
+  /* for unit test*/
+  Map<String, String> createMultivalueMap(String paramName, String paramValue) {
+    Map<String, String> queryParams = new LinkedHashMap<>();
+    queryParams.put(paramName, encodeQueryValue(paramValue));
+    return queryParams;
   }
 
-  /* for unit test*/
-  MultivaluedHashMap createMultivalueMap(String paramName, String paramValue) {
-    MultivaluedHashMap queryParams = new MultivaluedHashMap();
-    queryParams.add(paramName, UriComponent.encode(paramValue, UriComponent.Type.QUERY_PARAM));
-    return queryParams;
+  /** Percent-encodes a value for use in a query string. */
+  private static String encodeQueryValue(String value) {
+    return URLEncoder.encode(NVL(value, ""), StandardCharsets.UTF_8);
+  }
+
+  /**
+   * Percent-encodes a value for use inside a path segment, as matrix parameters are. The form
+   * encoding of {@link #encodeQueryValue} would be wrong here: a {@code +} is a literal plus in a
+   * path, not a space.
+   */
+  private static String encodePathValue(String value) {
+    return encodeQueryValue(value).replace("+", "%20");
   }
 
   /** Resolves incoming-row URL substitution and HTTP method defaults for this row. */
   protected void applyDynamicRowUrlAndMethod(Object[] rowData) throws HopException {
     if (meta.isUrlInField()) {
       if (!Utils.isEmpty(data.connectionName)) {
-        data.realUrl = baseUrl + data.inputRowMeta.getString(rowData, data.indexOfUrlField);
+        data.realUrl =
+            resolveAgainstBase(baseUrl, data.inputRowMeta.getString(rowData, data.indexOfUrlField));
       } else {
         data.realUrl = data.inputRowMeta.getString(rowData, data.indexOfUrlField);
       }
@@ -236,53 +245,67 @@ public class Rest extends BaseTransform<RestMeta, RestData> {
     if (pagingQueries == null || pagingQueries.isEmpty()) {
       return baseUrlResolved;
     }
-    UriBuilder ub = UriBuilder.fromUri(URI.create(baseUrlResolved));
-    for (Map.Entry<String, String> e : pagingQueries.entrySet()) {
-      if (!Utils.isEmpty(e.getKey())) {
-        ub.queryParam(e.getKey(), e.getValue() == null ? "" : e.getValue());
+    try {
+      URIBuilder ub = new URIBuilder(baseUrlResolved);
+      for (Map.Entry<String, String> e : pagingQueries.entrySet()) {
+        if (!Utils.isEmpty(e.getKey())) {
+          ub.addParameter(e.getKey(), e.getValue() == null ? "" : e.getValue());
+        }
       }
+      return ub.build().toString();
+    } catch (URISyntaxException e) {
+      throw new IllegalArgumentException("Not a valid URL: " + baseUrlResolved, e);
     }
-    return ub.build().toString();
   }
 
   /**
-   * Appends the configured matrix and query parameters (from the current row) to the given URL. The
-   * standalone request path applies these directly to the Jersey {@link WebTarget}; the REST
-   * connection path builds its target inside {@link
-   * org.apache.hop.metadata.rest.RestConnection#getInvocationBuilder}, so we bake the parameters
-   * into the URL here to keep both paths equivalent (issue #7621).
+   * Joins a REST connection's base URL with the transform's own URL value.
+   *
+   * <p>These used to be concatenated as raw strings, so a trailing or leading slash produced a
+   * doubled separator, a missing one glued two path segments together, and an absolute URL in the
+   * field yielded something malformed. A value that carries its own scheme is treated as absolute
+   * and the base is ignored.
    */
-  protected String appendMatrixAndQueryParams(String url, Object[] rowData) throws HopException {
-    if (!data.useMatrixParams && !data.useParams) {
+  protected static String resolveAgainstBase(String base, String value) {
+    String url = NVL(value, "");
+    if (Utils.isEmpty(base) || hasScheme(url)) {
       return url;
     }
-    UriBuilder builder = UriBuilder.fromUri(URI.create(url));
-    if (data.useMatrixParams) {
-      for (int i = 0; i < data.nrMatrixParams; i++) {
-        String value = data.inputRowMeta.getString(rowData, data.indexOfMatrixParamFields[i]);
-        if (isDebug()) {
-          logDebug(
-              BaseMessages.getString(
-                  PKG, "Rest.Log.matrixParameterValue", data.matrixParamNames[i], value));
-        }
-        builder =
-            builder.matrixParam(
-                data.matrixParamNames[i],
-                UriComponent.encode(value, UriComponent.Type.QUERY_PARAM));
+    if (url.isEmpty()) {
+      return base;
+    }
+    boolean baseEndsWithSlash = base.endsWith("/");
+    boolean valueStartsWithSlash = url.startsWith("/");
+    if (baseEndsWithSlash && valueStartsWithSlash) {
+      return base + url.substring(1);
+    }
+    if (!baseEndsWithSlash && !valueStartsWithSlash) {
+      return base + "/" + url;
+    }
+    return base + url;
+  }
+
+  /**
+   * True when the value is an absolute URL rather than a path to hang off the base URL. The scheme
+   * has to be followed by {@code ://}: requiring only a colon would read {@code localhost:8080/x}
+   * as scheme {@code localhost} instead of a host and port.
+   */
+  private static boolean hasScheme(String url) {
+    int separator = url.indexOf("://");
+    if (separator <= 0) {
+      return false;
+    }
+    // A scheme is ALPHA *( ALPHA / DIGIT / "+" / "-" / "." ).
+    if (!Character.isLetter(url.charAt(0))) {
+      return false;
+    }
+    for (int i = 1; i < separator; i++) {
+      char c = url.charAt(i);
+      if (!Character.isLetterOrDigit(c) && c != '+' && c != '-' && c != '.') {
+        return false;
       }
     }
-    if (data.useParams) {
-      for (int i = 0; i < data.nrParams; i++) {
-        String value = data.inputRowMeta.getString(rowData, data.indexOfParamFields[i]);
-        if (isDebug()) {
-          logDebug(
-              BaseMessages.getString(
-                  PKG, "Rest.Log.queryParameterValue", data.paramNames[i], value));
-        }
-        builder = builder.queryParam(data.paramNames[i], value);
-      }
-    }
-    return builder.build().toString();
+    return true;
   }
 
   /**
@@ -319,87 +342,26 @@ public class Rest extends BaseTransform<RestMeta, RestData> {
         pagingQueries != null ? pagingQueries : new LinkedHashMap<>();
     String effectiveBase = mergePagingQueriesIntoResolvedUrl(mergeBase, query);
 
-    WebTarget webResource = null;
-    Client client = null;
-    Invocation.Builder invocationBuilder = null;
     long startTime;
-    Response response;
+    HttpExchange response;
     final long httpLineageT0 = System.currentTimeMillis();
     final long httpVolIn0 = dataVolumeIn != null ? dataVolumeIn : 0L;
     final long httpVolOut0 = dataVolumeOut != null ? dataVolumeOut : 0L;
     try {
-      String requestUri = effectiveBase;
-      if (!StringUtils.isEmpty(meta.getConnectionName())) {
-        // The connection builds its own Jersey target internally, so bake the matrix/query
-        // parameters into the URL and pass the timeouts through, to keep this path equivalent to
-        // the standalone path below (issue #7621).
-        requestUri = appendMatrixAndQueryParams(effectiveBase, rowData);
-        if (isDetailed()) {
+      CloseableHttpClient client = getClient();
+      if (isDetailed()) {
+        if (connection != null) {
           logDetailed(
               BaseMessages.getString(
                   PKG, "Rest.Log.UsingConnection", meta.getConnectionName(), NVL(baseUrl, "")));
-        }
-        invocationBuilder =
-            connection.getInvocationBuilder(
-                requestUri,
-                data.realProxyHost,
-                data.realProxyPort,
-                data.realConnectionTimeout,
-                data.realReadTimeout);
-      } else {
-        if (isDetailed()) {
+        } else {
           logDetailed(BaseMessages.getString(PKG, "Rest.Log.NoConnection"));
         }
-        ClientBuilder clientBuilder = createClientBuilder();
-        clientBuilder
-            .withConfig(data.config)
-            .property(HttpUrlConnectorProvider.SET_METHOD_WORKAROUND, true);
-
-        if (meta.isIgnoreSsl() || !Utils.isEmpty(data.trustStoreFile)) {
-          clientBuilder.hostnameVerifier((s1, s2) -> true);
-          clientBuilder.sslContext(data.sslContext);
-        }
-
-        client = clientBuilder.build();
-        if (data.basicAuthentication != null) {
-          client.register(data.basicAuthentication);
-        }
-        webResource = client.target(effectiveBase);
-
-        if (data.useMatrixParams) {
-          UriBuilder builder = webResource.getUriBuilder();
-          for (int i = 0; i < data.nrMatrixParams; i++) {
-            String value = data.inputRowMeta.getString(rowData, data.indexOfMatrixParamFields[i]);
-            if (isDebug()) {
-              logDebug(
-                  BaseMessages.getString(
-                      PKG, "Rest.Log.matrixParameterValue", data.matrixParamNames[i], value));
-            }
-            builder =
-                builder.matrixParam(
-                    data.matrixParamNames[i],
-                    UriComponent.encode(value, UriComponent.Type.QUERY_PARAM));
-          }
-          webResource = client.target(builder.build());
-        }
-
-        if (data.useParams) {
-          for (int i = 0; i < data.nrParams; i++) {
-            String value = data.inputRowMeta.getString(rowData, data.indexOfParamFields[i]);
-            if (isDebug()) {
-              logDebug(
-                  BaseMessages.getString(
-                      PKG, "Rest.Log.queryParameterValue", data.paramNames[i], value));
-            }
-            webResource = webResource.queryParam(data.paramNames[i], value);
-          }
-        }
-        invocationBuilder = webResource.request();
-        requestUri = webResource.getUri().toString();
       }
-      if (invocationBuilder == null) {
-        throw new HopException("Invocation builder not initialized");
-      }
+
+      // One request for both paths. The connection used to build its own target internally, which
+      // is why the matrix and query parameters had to be baked into the URL beforehand (#7621).
+      String requestUri = buildRequestUri(effectiveBase, rowData);
       if (isDetailed()) {
         logDetailed(
             BaseMessages.getString(PKG, "Rest.Log.SendingRequest", data.method, requestUri));
@@ -410,7 +372,7 @@ public class Rest extends BaseTransform<RestMeta, RestData> {
                 PKG, "Rest.Log.Timeouts", data.realConnectionTimeout, data.realReadTimeout));
       }
 
-      MultivaluedMap<String, Object> headerMap = new MultivaluedHashMap<>();
+      Map<String, String> headerMap = new LinkedHashMap<>();
 
       boolean acceptHeaderProvided = false;
       String contentType = null;
@@ -434,7 +396,7 @@ public class Rest extends BaseTransform<RestMeta, RestData> {
             continue;
           }
 
-          headerMap.putSingle(data.headerNames[i], value);
+          headerMap.put(data.headerNames[i], value);
           if ("Content-Type".equals(data.headerNames[i])) {
             contentType = value;
           }
@@ -453,22 +415,18 @@ public class Rest extends BaseTransform<RestMeta, RestData> {
       }
 
       if (!acceptHeaderProvided && data.mediaType != null) {
-        headerMap.putSingle("Accept", data.mediaType);
+        headerMap.put("Accept", data.mediaType.getMimeType());
       }
 
-      /* Jersey Invocation.Builder.headers(MultivaluedMap) replaces all headers — so Bearer / API-key
-       * set inside RestConnection.getInvocationBuilder(...) would be stripped. This is the single
-       * place that merges connection auth into the outbound headers: it decrypts the credential
-       * (so an "Encrypted ..." API key / token is sent in clear) and skips when the row already
-       * supplied Authorization or the configured API-key header (rows win). */
-      if (!StringUtils.isEmpty(meta.getConnectionName()) && connection != null) {
-        connection.applyBearerAndApiKeyHeaders(invocationBuilder, headerMap);
-      }
+      /* The single place authentication is applied, for both the connection and the transform's
+       * own credentials. It has to happen against this map rather than the invocation builder,
+       * A row that supplied its own Authorization keeps it. */
+      authenticator().applyRequestHeaders(headerMap, requestUri);
 
       if (pagingHeaderParams != null && !pagingHeaderParams.isEmpty()) {
         for (Map.Entry<String, String> e : pagingHeaderParams.entrySet()) {
           if (!Utils.isEmpty(e.getKey())) {
-            headerMap.putSingle(e.getKey(), e.getValue() == null ? "" : e.getValue());
+            headerMap.put(e.getKey(), e.getValue() == null ? "" : e.getValue());
           }
         }
       }
@@ -513,8 +471,7 @@ public class Rest extends BaseTransform<RestMeta, RestData> {
         }
       }
 
-      invocationBuilder.headers(headerMap);
-      final Invocation.Builder finalInvocationBuilder = invocationBuilder;
+      final String finalRequestUri = requestUri;
       final Object finalEntity = entity;
       final String finalContentType = contentType;
 
@@ -531,18 +488,15 @@ public class Rest extends BaseTransform<RestMeta, RestData> {
           executeWithRetry(
               () -> {
                 try {
-                  return executeRequest(finalInvocationBuilder, finalEntity, finalContentType);
+                  return executeRequest(finalRequestUri, headerMap, finalEntity, finalContentType);
                 } catch (HopException e) {
                   throw new HopRuntimeException(e);
                 }
               });
 
-      if (response != null) {
-        response.bufferEntity();
-      }
       long responseTime = System.currentTimeMillis() - startTime;
 
-      int status = response.getStatus();
+      int status = response.status();
       if (isDetailed()) {
         logDetailed(BaseMessages.getString(PKG, "Rest.Log.ResponseCode", status));
         logDetailed(BaseMessages.getString(PKG, "Rest.Log.ResponseTime", responseTime, requestUri));
@@ -553,80 +507,27 @@ public class Rest extends BaseTransform<RestMeta, RestData> {
         }
       }
 
-      if (response.hasEntity()) {
-        response.bufferEntity();
-      }
+      Map<String, List<String>> headers = response.headers();
+      String headerString = buildHeaderJson(headers);
+      trackResponseBytes(response);
 
       // A binary result skips String decoding entirely: the bytes go into the row untouched.
       if (data.binaryResult) {
-        byte[] bodyBytes = readResponseBytes(response, effectiveBase);
-        trackResponseBytes(response, bodyBytes);
+        byte[] bodyBytes = response.body();
         if (isRowLevel()) {
           logRowlevel(
               BaseMessages.getString(
                   PKG, "Rest.Log.BinaryResponseBody", bodyBytes == null ? 0 : bodyBytes.length));
         }
-        MultivaluedMap<String, Object> binaryHeaders = searchForHeaders(response);
         emitHttpLineage(httpLineageT0, httpVolIn0, httpVolOut0, status, true, null);
         return new RestExchangeResult(
-            null,
-            bodyBytes,
-            status,
-            responseTime,
-            buildHeaderJson(binaryHeaders),
-            binaryHeaders,
-            effectiveBase);
+            null, bodyBytes, status, responseTime, headerString, headers, effectiveBase);
       }
 
-      String body;
-      try {
-        body = response.readEntity(String.class);
-      } catch (ProcessingException ex) {
-        String errorMessage = ex.getMessage();
-        if (errorMessage != null
-            && errorMessage.contains("Too many \"Content-Type\" header values")) {
-          throw new HopException(
-              BaseMessages.getString(
-                  PKG, "Rest.Error.DuplicateContentType", effectiveBase, errorMessage),
-              ex);
-        }
-        body = "";
-        if (response.hasEntity()) {
-          try (InputStream stream = response.readEntity(InputStream.class)) {
-            if (stream != null) {
-              body = new String(stream.readAllBytes(), StandardCharsets.UTF_8);
-            }
-          } catch (Exception ioEx) {
-            if (isDetailed()) {
-              logDetailed("Unable to read response entity as String", ioEx);
-            }
-            throw new HopException(
-                BaseMessages.getString(PKG, "Rest.Error.CanNotReadResponse", effectiveBase), ex);
-          }
-        }
-      } catch (Exception ex) {
-        body = "";
-        if (response.hasEntity()) {
-          try (InputStream stream = response.readEntity(InputStream.class)) {
-            if (stream != null) {
-              body = new String(stream.readAllBytes(), StandardCharsets.UTF_8);
-            }
-          } catch (Exception ioEx) {
-            if (isDetailed()) {
-              logDetailed("Unable to read response entity as String", ioEx);
-            }
-            throw new HopException(
-                BaseMessages.getString(PKG, "Rest.Error.CanNotReadResponse", effectiveBase), ex);
-          }
-        }
-      }
-      trackResponseBytes(response, body);
+      String body = new String(response.body(), resolveCharset(response.contentType()));
       if (isRowLevel()) {
         logRowlevel(BaseMessages.getString(PKG, "Rest.Log.ResponseBody", body));
       }
-
-      MultivaluedMap<String, Object> headers = searchForHeaders(response);
-      String headerString = buildHeaderJson(headers);
 
       emitHttpLineage(httpLineageT0, httpVolIn0, httpVolOut0, status, true, null);
       return new RestExchangeResult(
@@ -636,19 +537,86 @@ public class Rest extends BaseTransform<RestMeta, RestData> {
       throw new HopException(
           BaseMessages.getString(PKG, "Rest.Error.CanNotReadURL", NVL(data.realUrl, effectiveBase)),
           e);
-    } finally {
-      if (client != null) {
-        client.close();
+    }
+    // The client is not closed here: it is shared by every row and released on dispose().
+  }
+
+  /**
+   * A response, fully materialised. HttpClient5 releases the connection as soon as the exchange
+   * returns, so the body has to be read before then rather than lazily like a JAX-RS Response.
+   */
+  private record HttpExchange(
+      int status, byte[] body, Map<String, List<String>> headers, ContentType contentType) {}
+
+  /** Reads an in-flight response into memory so it can outlive the exchange. */
+  private static HttpExchange materialize(ClassicHttpResponse response) throws IOException {
+    HttpEntity entity = response.getEntity();
+    byte[] body = entity == null ? new byte[0] : EntityUtils.toByteArray(entity);
+    ContentType contentType = null;
+    if (entity != null && entity.getContentType() != null) {
+      try {
+        contentType = ContentType.parse(entity.getContentType());
+      } catch (Exception ignored) {
+        // Malformed Content-Type: fall back to the default charset below.
       }
+    }
+    Map<String, List<String>> headers = new LinkedHashMap<>();
+    for (Header header : response.getHeaders()) {
+      headers.computeIfAbsent(header.getName(), k -> new ArrayList<>()).add(header.getValue());
+    }
+    return new HttpExchange(response.getCode(), body, headers, contentType);
+  }
+
+  /** Applies the configured matrix and query parameters for this row to the request URL. */
+  private String buildRequestUri(String base, Object[] rowData) throws HopException {
+    StringBuilder matrix = new StringBuilder();
+    if (data.useMatrixParams) {
+      for (int i = 0; i < data.nrMatrixParams; i++) {
+        String value = data.inputRowMeta.getString(rowData, data.indexOfMatrixParamFields[i]);
+        if (isDebug()) {
+          logDebug(
+              BaseMessages.getString(
+                  PKG, "Rest.Log.matrixParameterValue", data.matrixParamNames[i], value));
+        }
+        matrix
+            .append(';')
+            .append(data.matrixParamNames[i])
+            .append('=')
+            .append(encodePathValue(value));
+      }
+    }
+    // Matrix parameters belong to the last path segment, so they go in ahead of any query string.
+    String withMatrix = base;
+    if (matrix.length() > 0) {
+      int query = base.indexOf('?');
+      withMatrix =
+          query < 0 ? base + matrix : base.substring(0, query) + matrix + base.substring(query);
+    }
+    try {
+      URIBuilder builder = new URIBuilder(withMatrix);
+      if (data.useParams) {
+        for (int i = 0; i < data.nrParams; i++) {
+          String value = data.inputRowMeta.getString(rowData, data.indexOfParamFields[i]);
+          if (isDebug()) {
+            logDebug(
+                BaseMessages.getString(
+                    PKG, "Rest.Log.queryParameterValue", data.paramNames[i], value));
+          }
+          builder.addParameter(data.paramNames[i], value);
+        }
+      }
+      return builder.build().toString();
+    } catch (URISyntaxException e) {
+      throw new HopException("Not a valid URL: " + withMatrix, e);
     }
   }
 
   /** Serializes the response headers to the JSON string exposed by the response-header field. */
-  private String buildHeaderJson(MultivaluedMap<String, Object> headers) {
+  private String buildHeaderJson(Map<String, List<String>> headers) {
     JSONObject json = new JSONObject();
-    for (Map.Entry<String, List<Object>> entry : headers.entrySet()) {
+    for (Map.Entry<String, List<String>> entry : headers.entrySet()) {
       String name = entry.getKey();
-      List<Object> value = entry.getValue();
+      List<String> value = entry.getValue();
       if (value.size() > 1) {
         json.put(name, value);
       } else {
@@ -656,42 +624,6 @@ public class Rest extends BaseTransform<RestMeta, RestData> {
       }
     }
     return json.toJSONString();
-  }
-
-  /**
-   * Reads the response body as raw bytes for a binary result field (issue #3746). Both request
-   * paths land here: the entity is buffered before this point, so it does not matter whether the
-   * Apache 5 or the JDK connector produced it.
-   */
-  private byte[] readResponseBytes(Response response, String requestUri) throws HopException {
-    if (!response.hasEntity()) {
-      return new byte[0];
-    }
-    try {
-      return response.readEntity(byte[].class);
-    } catch (Exception ex) {
-      // Same fallback the String path uses: go to the raw stream when the entity provider balks,
-      // for instance on a malformed or duplicated Content-Type header.
-      try (InputStream stream = response.readEntity(InputStream.class)) {
-        return stream == null ? new byte[0] : stream.readAllBytes();
-      } catch (Exception ioEx) {
-        if (isDetailed()) {
-          logDetailed("Unable to read response entity as bytes", ioEx);
-        }
-        throw new HopException(
-            BaseMessages.getString(PKG, "Rest.Error.CanNotReadResponse", requestUri), ex);
-      }
-    }
-  }
-
-  private void trackResponseBytes(Response response, byte[] body) {
-    long responseBytes = response.getLength();
-    if (responseBytes < 0 && body != null) {
-      responseBytes = body.length;
-    }
-    if (responseBytes > 0) {
-      dataVolumeIn = (dataVolumeIn != null ? dataVolumeIn : 0L) + responseBytes;
-    }
   }
 
   protected Object[] assembleResultRow(Object[] baseRowMaybeNull, RestExchangeResult exchange)
@@ -1000,7 +932,7 @@ public class Rest extends BaseTransform<RestMeta, RestData> {
   }
 
   /** Uses RFC 5988 / RFC 8288 Web Link parsing ({@code LinkHeaderPaging}) for {@code rel=next}. */
-  private static String extractRelNextUri(MultivaluedMap<String, Object> headers) {
+  private static String extractRelNextUri(Map<String, List<String>> headers) {
     return LinkHeaderPaging.findFirstUriWithRelNext(headers);
   }
 
@@ -1341,7 +1273,8 @@ public class Rest extends BaseTransform<RestMeta, RestData> {
     return s.isEmpty() ? java.util.Optional.empty() : java.util.Optional.of(s);
   }
 
-  private Response executeWithRetry(Supplier<Response> requestSupplier) throws HopException {
+  private HttpExchange executeWithRetry(Supplier<HttpExchange> requestSupplier)
+      throws HopException {
     int maxRetries =
         meta.getRetryTimes() != null ? meta.getRetryTimes() : RestConst.DEFAULT_RETRY_TIMES;
     long baseDelay =
@@ -1354,10 +1287,10 @@ public class Rest extends BaseTransform<RestMeta, RestData> {
     }
 
     for (int attempt = 0; attempt <= maxRetries; attempt++) {
-      Response response = null;
+      HttpExchange response = null;
       try {
         response = requestSupplier.get();
-        int status = response.getStatus();
+        int status = response.status();
 
         if (!shouldRetry(String.valueOf(status))) {
           return response;
@@ -1374,9 +1307,8 @@ public class Rest extends BaseTransform<RestMeta, RestData> {
         }
       }
 
-      if (response != null) {
-        response.close();
-      }
+      // Nothing to release: the exchange was materialised into memory before the connection
+      // was returned to the pool.
       sleepBeforeRetry(attempt, baseDelay);
     }
 
@@ -1441,90 +1373,31 @@ public class Rest extends BaseTransform<RestMeta, RestData> {
   }
 
   /**
-   * Issues the request. The entity is either a String or a byte[]; Jersey selects its message body
-   * writer from the runtime type, and the byte[] writer copies the array to the wire untouched, so
-   * a binary body survives on both the standalone and the REST-connection path (issue #3746).
+   * Issues the request. The entity is either a String or a byte[]; a byte[] goes to the wire
+   * untouched, so a binary body survives (issue #3746).
+   *
+   * <p>Any verb is passed through verbatim (issue #4770): HttpClient5 writes the method token
+   * straight into the request line, so LIST, PURGE, PROPFIND and friends need nothing special.
    */
-  private Response executeRequest(
-      Invocation.Builder invocationBuilder, Object entity, String contentType) throws HopException {
-    // A body-less POST/PUT/PATCH/DELETE must still carry a Content-Length header (issue #7621).
-    // The JDK HttpURLConnection connector used by the REST-connection path omits Content-Length for
-    // a null entity, whereas the standalone (Apache) connector sends Content-Length: 0. Normalizing
-    // a null body to an empty entity makes both request paths send Content-Length consistently.
-    Object body = entity;
-    if (body == null) {
-      body = data.binaryBody ? new byte[0] : "";
-    }
+  private HttpExchange executeRequest(
+      String requestUri, Map<String, String> headers, Object entity, String contentType)
+      throws HopException {
+    // A body-less POST/PUT/PATCH/DELETE must still carry a Content-Length header (issue #7621),
+    // so a null body becomes an empty entity rather than no entity at all.
+    Object body = entity == null ? (data.binaryBody ? new byte[0] : "") : entity;
     try {
-      switch (data.method) {
-        case RestMeta.HTTP_METHOD_GET -> {
-          return invocationBuilder.get(Response.class);
-        }
-        case RestMeta.HTTP_METHOD_POST -> {
-          trackRequestBytes(
-              body,
-              contentType != null ? resolveCharset(contentType) : resolveCharset(data.mediaType));
-          if (null != contentType) {
-            return invocationBuilder.post(Entity.entity(body, contentType));
-          } else {
-            return invocationBuilder.post(Entity.entity(body, data.mediaType));
-          }
-        }
-        case RestMeta.HTTP_METHOD_PUT -> {
-          trackRequestBytes(
-              body,
-              contentType != null ? resolveCharset(contentType) : resolveCharset(data.mediaType));
-          if (null != contentType) {
-            return invocationBuilder.put(Entity.entity(body, contentType));
-          } else {
-            return invocationBuilder.put(Entity.entity(body, data.mediaType));
-          }
-        }
-        case RestMeta.HTTP_METHOD_DELETE -> {
-          trackRequestBytes(
-              body,
-              contentType != null ? resolveCharset(contentType) : resolveCharset(data.mediaType));
-          Invocation invocation =
-              invocationBuilder.build("DELETE", Entity.entity(body, data.mediaType));
-          return invocation.invoke();
-        }
-        case RestMeta.HTTP_METHOD_HEAD -> {
-          return invocationBuilder.head();
-        }
-        case RestMeta.HTTP_METHOD_OPTIONS -> {
-          return invocationBuilder.options();
-        }
-        case RestMeta.HTTP_METHOD_PATCH -> {
-          trackRequestBytes(
-              body,
-              contentType != null ? resolveCharset(contentType) : resolveCharset(data.mediaType));
-          if (null != contentType) {
-            return invocationBuilder.method(
-                RestMeta.HTTP_METHOD_PATCH, Entity.entity(body, contentType));
-          } else {
-            return invocationBuilder.method(
-                RestMeta.HTTP_METHOD_PATCH, Entity.entity(body, data.mediaType));
-          }
-        }
-        default -> {
-          // Any other verb — LIST, PURGE, PROPFIND, ... — is passed through verbatim (issue
-          // #4770). Jersey accepts an arbitrary method token: the Apache 5 connector used by the
-          // standalone path writes it straight into the request line, while the JDK
-          // HttpURLConnection connector used by the REST-connection path gets there via
-          // SET_METHOD_WORKAROUND, which is why the Hop launch scripts pass
-          // --add-opens java.base/java.net=ALL-UNNAMED.
-          // The body is sent the same way DELETE does it: a null body is normalized to "" above,
-          // so a body-less custom verb still carries Content-Length: 0.
-          trackRequestBytes(
-              body,
-              contentType != null ? resolveCharset(contentType) : resolveCharset(data.mediaType));
-          if (null != contentType) {
-            return invocationBuilder.method(data.method, Entity.entity(body, contentType));
-          } else {
-            return invocationBuilder.method(data.method, Entity.entity(body, data.mediaType));
-          }
-        }
+      HttpUriRequestBase request = new HttpUriRequestBase(data.method, URI.create(requestUri));
+      headers.forEach(request::addHeader);
+
+      if (RestMeta.isActiveBody(data.method)) {
+        ContentType type = contentType != null ? ContentType.parse(contentType) : data.mediaType;
+        trackRequestBytes(body, resolveCharset(type));
+        request.setEntity(
+            body instanceof byte[] bytes
+                ? new ByteArrayEntity(bytes, type)
+                : new StringEntity((String) body, type));
       }
+      return data.client.execute(request, Rest::materialize);
     } catch (Exception e) {
       throw new HopException("Request could not be processed", e);
     }
@@ -1582,11 +1455,8 @@ public class Rest extends BaseTransform<RestMeta, RestData> {
     }
   }
 
-  private void trackResponseBytes(Response response, String body) {
-    long responseBytes = response.getLength();
-    if (responseBytes < 0 && body != null) {
-      responseBytes = body.getBytes(resolveCharset(response.getMediaType())).length;
-    }
+  private void trackResponseBytes(HttpExchange response) {
+    long responseBytes = response.body().length;
     if (responseBytes > 0) {
       dataVolumeIn = (dataVolumeIn != null ? dataVolumeIn : 0L) + responseBytes;
     }
@@ -1595,7 +1465,7 @@ public class Rest extends BaseTransform<RestMeta, RestData> {
   private Charset resolveCharset(String mediaTypeValue) {
     if (!Utils.isEmpty(mediaTypeValue)) {
       try {
-        return resolveCharset(MediaType.valueOf(mediaTypeValue));
+        return resolveCharset(ContentType.parse(mediaTypeValue));
       } catch (Exception ignored) {
         // Fall back to UTF-8 below if the header value is malformed.
       }
@@ -1603,17 +1473,9 @@ public class Rest extends BaseTransform<RestMeta, RestData> {
     return StandardCharsets.UTF_8;
   }
 
-  private Charset resolveCharset(MediaType mediaType) {
-    if (mediaType != null) {
-      Map<String, String> parameters = mediaType.getParameters();
-      String charsetName = parameters.get("charset");
-      if (!Utils.isEmpty(charsetName)) {
-        try {
-          return Charset.forName(charsetName);
-        } catch (Exception ignored) {
-          // Fall back to UTF-8 below if the charset is unknown.
-        }
-      }
+  private Charset resolveCharset(ContentType mediaType) {
+    if (mediaType != null && mediaType.getCharset() != null) {
+      return mediaType.getCharset();
     }
     return StandardCharsets.UTF_8;
   }
@@ -1626,47 +1488,138 @@ public class Rest extends BaseTransform<RestMeta, RestData> {
     return s.substring(0, maxChars) + "...";
   }
 
-  private void setConfig() throws HopException {
-    if (data.config == null) {
-      // Use ApacheHttpClient for supporting proxy authentication.
-      data.config = new ClientConfig();
-      data.config.connectorProvider(new Apache5ConnectorProvider());
-      data.config.property(
-          ClientProperties.REQUEST_ENTITY_PROCESSING, RequestEntityProcessing.BUFFERED);
-      data.config.property(ClientProperties.SUPPRESS_HTTP_COMPLIANCE_VALIDATION, true);
+  /**
+   * Resolves the client configuration from whichever source describes this transform: the selected
+   * REST connection, or the transform's own fields.
+   */
+  protected RestClientSettings createClientSettings() throws HopException {
+    if (connection != null) {
+      warnAboutSupersededFields();
+      return connection.createClientSettings();
+    }
+    return createTransformClientSettings();
+  }
 
-      data.config.property(ClientProperties.READ_TIMEOUT, data.realReadTimeout);
-      data.config.property(ClientProperties.CONNECT_TIMEOUT, data.realConnectionTimeout);
-
-      // PROXY CONFIGURATION
-      if (!Utils.isEmpty(data.realProxyHost)) {
-        data.config.property(
-            ClientProperties.PROXY_URI, "http://" + data.realProxyHost + ":" + data.realProxyPort);
-      }
-      // HTTP BASIC AUTHENTICATION
-      if (StringUtils.isEmpty(meta.getConnectionName())) {
-        if (!Utils.isEmpty(data.realHttpLogin) || !Utils.isEmpty(data.realHttpPassword)) {
-          data.basicAuthentication =
-              HttpAuthenticationFeature.basicBuilder()
-                  .credentials(data.realHttpLogin, data.realHttpPassword)
-                  .build();
-        }
-      }
-      // SSL TRUST STORE CONFIGURATION
-      if (!Utils.isEmpty(data.trustStoreFile) && !meta.isIgnoreSsl()) {
-        setTrustStoreFile();
-      }
-      if (meta.isIgnoreSsl()) {
-        setTrustAll();
-      }
+  /**
+   * A selected REST connection describes the whole client, so the transform's own connection fields
+   * are ignored. They are not cleared — the connection can be deselected again — but a pipeline
+   * that set them before is entitled to know they stopped being read.
+   */
+  private void warnAboutSupersededFields() {
+    List<String> ignored = new ArrayList<>();
+    if (!Utils.isEmpty(meta.getProxyHost())) {
+      ignored.add("proxy");
+    }
+    if (!Utils.isEmpty(meta.getHttpLogin()) || !Utils.isEmpty(meta.getHttpPassword())) {
+      ignored.add("HTTP authentication");
+    }
+    if (!Utils.isEmpty(meta.getTrustStoreFile()) || meta.isIgnoreSsl()) {
+      ignored.add("SSL");
+    }
+    if (!Utils.isEmpty(meta.getConnectionTimeout()) || !Utils.isEmpty(meta.getReadTimeout())) {
+      ignored.add("timeouts");
+    }
+    if (!ignored.isEmpty()) {
+      logBasic(
+          BaseMessages.getString(
+              PKG,
+              "Rest.Log.ConnectionSupersedesTransformFields",
+              data.connectionName,
+              String.join(", ", ignored)));
     }
   }
 
-  private void setTrustAll() throws HopException {
-    try {
-      SSLContext ctx = HttpClientManager.getTrustAllSslContext();
+  /** Client configuration taken from the transform's own fields, with no connection selected. */
+  private RestClientSettings createTransformClientSettings() throws HopException {
+    RestClientSettings settings = new RestClientSettings();
 
-      data.sslContext = ctx;
+    // Only apply a timeout that is actually configured. An empty field resolves to -1, which used
+    // to be passed straight through here while the connection path left it unset; both now mean
+    // the same thing, which is Jersey's default of no timeout.
+    if (data.realConnectionTimeout >= 0) {
+      settings.setConnectTimeout(data.realConnectionTimeout);
+    }
+    if (data.realReadTimeout >= 0) {
+      settings.setReadTimeout(data.realReadTimeout);
+    }
+
+    // PROXY CONFIGURATION
+    if (!Utils.isEmpty(data.realProxyHost)) {
+      settings.setProxyHost(data.realProxyHost);
+      settings.setProxyPort(data.realProxyPort);
+    }
+
+    // HTTP BASIC AUTHENTICATION
+    if (!Utils.isEmpty(data.realHttpLogin) || !Utils.isEmpty(data.realHttpPassword)) {
+      settings.setAuthType(RestAuthType.BASIC);
+      settings.setBasicUsername(data.realHttpLogin);
+      settings.setBasicPassword(data.realHttpPassword);
+      // RestMeta.preemptive is serialized and has a checkbox in the dialog, but has never been
+      // read: the credentials have always gone out on the first request. Honouring the field would
+      // switch every existing pipeline to challenge-response, so it stays unwired for now.
+      settings.setBasicPreemptive(true);
+      // Only a static URL gives an origin to bind the credentials to. With the URL coming from an
+      // input field and no base URL, there is nothing to check against, and the credentials go to
+      // whatever host the row names — which is what this transform has always done.
+      if (!meta.isUrlInField()) {
+        // Not data.realUrl: that is only resolved once the first row arrives, and the settings are
+        // built in init().
+        settings.setAuthOrigin(resolve(meta.getUrl()));
+      }
+    }
+
+    // SSL TRUST STORE CONFIGURATION
+    if (meta.isIgnoreSsl()) {
+      settings.setSslContext(trustAllSslContext());
+    } else if (!Utils.isEmpty(data.trustStoreFile)) {
+      settings.setSslContext(trustStoreSslContext());
+    }
+    if (settings.getSslContext() != null) {
+      settings.setPermissiveHostnameVerifier(true);
+    }
+    return settings;
+  }
+
+  /**
+   * The HTTP client for this transform copy, created on first use. A client is bound to a
+   * configuration rather than to a URL, so the same one serves every row even when the endpoint
+   * comes from an input field.
+   */
+  protected CloseableHttpClient getClient() throws HopException {
+    if (data.client == null) {
+      data.client = createClient();
+    }
+    return data.client;
+  }
+
+  /** Overridable so tests can supply a client without reaching the network. */
+  protected CloseableHttpClient createClient() throws HopException {
+    return RestClientFactory.createClient(clientSettings());
+  }
+
+  /** The resolved client configuration, built once per transform copy. */
+  private RestClientSettings clientSettings() throws HopException {
+    if (clientSettings == null) {
+      clientSettings = createClientSettings();
+    }
+    return clientSettings;
+  }
+
+  /**
+   * The authenticator that goes with the resolved configuration. It has its own accessor rather
+   * than being set while the client is built: a caller that supplies its own client would otherwise
+   * never get one.
+   */
+  private RestAuthenticator authenticator() throws HopException {
+    if (authenticator == null) {
+      authenticator = new RestAuthenticator(clientSettings());
+    }
+    return authenticator;
+  }
+
+  private SSLContext trustAllSslContext() throws HopException {
+    try {
+      return HttpClientManager.getTrustAllSslContext();
     } catch (NoSuchAlgorithmException e) {
       throw new HopException(BaseMessages.getString(PKG, "Rest.Error.NoSuchAlgorithm"), e);
     } catch (KeyManagementException e) {
@@ -1674,14 +1627,10 @@ public class Rest extends BaseTransform<RestMeta, RestData> {
     }
   }
 
-  private void setTrustStoreFile() throws HopException {
+  private SSLContext trustStoreSslContext() throws HopException {
     try (FileInputStream trustFileStream = new FileInputStream(data.trustStoreFile)) {
-
-      SSLContext ctx =
-          HttpClientManager.getSslContextWithTrustStoreFile(
-              trustFileStream, data.trustStorePassword);
-
-      data.sslContext = ctx;
+      return HttpClientManager.getSslContextWithTrustStoreFile(
+          trustFileStream, data.trustStorePassword);
     } catch (NoSuchAlgorithmException e) {
       throw new HopException(BaseMessages.getString(PKG, "Rest.Error.NoSuchAlgorithm"), e);
     } catch (KeyStoreException e) {
@@ -1696,10 +1645,6 @@ public class Rest extends BaseTransform<RestMeta, RestData> {
     } catch (KeyManagementException e) {
       throw new HopException(BaseMessages.getString(PKG, "Rest.Error.KeyManagementException"), e);
     }
-  }
-
-  protected MultivaluedMap<String, Object> searchForHeaders(Response response) {
-    return response.getHeaders();
   }
 
   @Override
@@ -1738,7 +1683,7 @@ public class Rest extends BaseTransform<RestMeta, RestData> {
       } else {
         // Static URL
         if (!Utils.isEmpty(data.connectionName)) {
-          data.realUrl = baseUrl + NVL(resolve(meta.getUrl()), "");
+          data.realUrl = resolveAgainstBase(baseUrl, resolve(meta.getUrl()));
         } else {
           data.realUrl = resolve(meta.getUrl());
         }
@@ -1937,23 +1882,23 @@ public class Rest extends BaseTransform<RestMeta, RestData> {
 
       String applicationType = NVL(meta.getApplicationType(), "");
       switch (applicationType) {
-        case RestMeta.APPLICATION_TYPE_XML -> data.mediaType = MediaType.APPLICATION_XML_TYPE;
-        case RestMeta.APPLICATION_TYPE_JSON -> data.mediaType = MediaType.APPLICATION_JSON_TYPE;
+        case RestMeta.APPLICATION_TYPE_XML -> data.mediaType = ContentType.APPLICATION_XML;
+        case RestMeta.APPLICATION_TYPE_JSON -> data.mediaType = ContentType.APPLICATION_JSON;
         case RestMeta.APPLICATION_TYPE_OCTET_STREAM ->
-            data.mediaType = MediaType.APPLICATION_OCTET_STREAM_TYPE;
-        case RestMeta.APPLICATION_TYPE_XHTML ->
-            data.mediaType = MediaType.APPLICATION_XHTML_XML_TYPE;
+            data.mediaType = ContentType.APPLICATION_OCTET_STREAM;
+        case RestMeta.APPLICATION_TYPE_XHTML -> data.mediaType = ContentType.APPLICATION_XHTML_XML;
         case RestMeta.APPLICATION_TYPE_FORM_URLENCODED ->
-            data.mediaType = MediaType.APPLICATION_FORM_URLENCODED_TYPE;
+            data.mediaType = ContentType.APPLICATION_FORM_URLENCODED;
         case RestMeta.APPLICATION_TYPE_ATOM_XML ->
-            data.mediaType = MediaType.APPLICATION_ATOM_XML_TYPE;
-        case RestMeta.APPLICATION_TYPE_SVG_XML ->
-            data.mediaType = MediaType.APPLICATION_SVG_XML_TYPE;
-        case RestMeta.APPLICATION_TYPE_TEXT_XML -> data.mediaType = MediaType.TEXT_XML_TYPE;
-        default -> data.mediaType = MediaType.TEXT_PLAIN_TYPE;
+            data.mediaType = ContentType.APPLICATION_ATOM_XML;
+        case RestMeta.APPLICATION_TYPE_SVG_XML -> data.mediaType = ContentType.APPLICATION_SVG_XML;
+        case RestMeta.APPLICATION_TYPE_TEXT_XML -> data.mediaType = ContentType.TEXT_XML;
+        default -> data.mediaType = ContentType.TEXT_PLAIN;
       }
       try {
-        setConfig();
+        // Resolve the client configuration now so a bad trust store or an unreadable connection
+        // fails the transform at startup rather than on the first row.
+        clientSettings();
       } catch (Exception e) {
         logError(BaseMessages.getString(PKG, "Rest.Error.Config"), e);
         return false;
@@ -1965,7 +1910,15 @@ public class Rest extends BaseTransform<RestMeta, RestData> {
 
   @Override
   public void dispose() {
-    data.config = null;
+    if (data.client != null) {
+      try {
+        data.client.close();
+      } catch (IOException e) {
+        logDebug("Error closing the REST client", e);
+      }
+      data.client = null;
+    }
+    clientSettings = null;
     data.headerNames = null;
     data.indexOfHeaderFields = null;
     data.paramNames = null;
