@@ -21,29 +21,19 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.anyString;
-import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.spy;
-import static org.mockito.Mockito.times;
-import static org.mockito.Mockito.verify;
-import static org.mockito.Mockito.when;
 
 import com.sun.net.httpserver.HttpServer;
-import jakarta.ws.rs.client.Client;
-import jakarta.ws.rs.client.ClientBuilder;
-import jakarta.ws.rs.client.Entity;
-import jakarta.ws.rs.client.Invocation;
-import jakarta.ws.rs.client.WebTarget;
-import jakarta.ws.rs.core.MediaType;
-import jakarta.ws.rs.core.MultivaluedHashMap;
-import jakarta.ws.rs.core.MultivaluedMap;
-import jakarta.ws.rs.core.Response;
 import java.io.OutputStream;
 import java.net.InetSocketAddress;
-import java.net.URI;
 import java.nio.charset.StandardCharsets;
+import java.util.Map;
+import org.apache.hc.client5.http.impl.classic.CloseableHttpClient;
+import org.apache.hc.core5.http.ContentType;
+import org.apache.hc.core5.http.io.entity.EntityUtils;
+import org.apache.hc.core5.http.io.entity.StringEntity;
+import org.apache.hc.core5.http.message.BasicClassicHttpRequest;
 import org.apache.hop.core.Const;
 import org.apache.hop.core.encryption.Encr;
 import org.apache.hop.core.encryption.TwoWayPasswordEncoderPluginType;
@@ -56,22 +46,17 @@ import org.apache.hop.core.row.value.ValueMetaString;
 import org.apache.hop.core.util.EnvUtil;
 import org.apache.hop.junit.rules.RestoreHopEngineEnvironmentExtension;
 import org.apache.hop.metadata.api.IHopMetadataProvider;
+import org.apache.hop.metadata.rest.client.RestClientFactory;
+import org.apache.hop.metadata.rest.client.RestClientSettings;
 import org.apache.hop.pipeline.PipelineMeta;
 import org.apache.hop.pipeline.engines.local.LocalPipelineEngine;
 import org.apache.hop.pipeline.transform.TransformMeta;
 import org.apache.hop.pipeline.transforms.rest.fields.ResultField;
-import org.glassfish.jersey.apache5.connector.Apache5ConnectorProvider;
-import org.glassfish.jersey.client.ClientConfig;
-import org.glassfish.jersey.client.ClientProperties;
-import org.glassfish.jersey.client.HttpUrlConnectorProvider;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.RegisterExtension;
-import org.mockito.ArgumentCaptor;
-import org.mockito.MockedStatic;
-import org.mockito.Mockito;
 
 /**
  * Tests for issue #4770: the REST transform must be able to send a custom HTTP method such as
@@ -109,79 +94,48 @@ class RestCustomMethodTest {
   }
 
   @Test
-  void testCallRestWithCustomMethodSendsMethodAndBody() throws HopException {
-    Response response = mock(Response.class);
-    when(response.getStatus()).thenReturn(200);
-    when(response.readEntity(String.class)).thenReturn("{\"items\":[]}");
-    MultivaluedMap<String, Object> headers = new MultivaluedHashMap<>();
-    headers.add("Content-Type", "application/json");
-    when(response.getHeaders()).thenReturn(headers);
+  void testCallRestWithCustomMethodSendsMethodAndBody() throws Exception {
+    TransformMeta transformMeta = new TransformMeta();
+    transformMeta.setName("TestRest");
+    PipelineMeta pipelineMeta = new PipelineMeta();
+    pipelineMeta.setName("TestRest");
+    pipelineMeta.addTransform(transformMeta);
 
-    Invocation.Builder builder = mock(Invocation.Builder.class);
-    when(builder.method(anyString(), any(Entity.class))).thenReturn(response);
-    when(builder.header(anyString(), any())).thenReturn(builder);
-    when(builder.accept((MediaType[]) any())).thenReturn(builder);
+    RestMeta meta = new RestMeta();
+    meta.setMethod("LIST");
+    meta.setUrl("http://example.com/api");
+    meta.setBodyField("body");
+    meta.setResultField(new ResultField());
+    meta.getResultField().setFieldName("result");
 
-    WebTarget webTarget = mock(WebTarget.class);
-    when(webTarget.request()).thenReturn(builder);
-    when(webTarget.getUri()).thenReturn(URI.create("http://example.com/api"));
+    RestData data = new RestData();
+    data.mediaType = ContentType.APPLICATION_JSON;
+    data.method = "LIST";
+    data.realUrl = "http://example.com/api";
+    data.resultFieldName = "result";
+    data.useBody = true;
+    data.indexOfBodyField = 1;
+    data.client =
+        FakeHttpClient.returning(200, "{\"items\":[]}", Map.of("Content-Type", "application/json"));
 
-    Client client = mock(Client.class);
-    when(client.target(anyString())).thenReturn(webTarget);
+    IRowMeta inputRowMeta = new RowMeta();
+    inputRowMeta.addValueMeta(new ValueMetaString("field1"));
+    inputRowMeta.addValueMeta(new ValueMetaString("body"));
+    data.inputRowMeta = inputRowMeta;
 
-    ClientBuilder clientBuilder = mock(ClientBuilder.class);
-    when(clientBuilder.withConfig(any(ClientConfig.class))).thenReturn(clientBuilder);
-    when(clientBuilder.property(anyString(), any())).thenReturn(clientBuilder);
-    when(clientBuilder.hostnameVerifier(any())).thenReturn(clientBuilder);
-    when(clientBuilder.sslContext(any())).thenReturn(clientBuilder);
-    when(clientBuilder.build()).thenReturn(client);
+    Rest rest = new Rest(transformMeta, meta, data, 0, pipelineMeta, new LocalPipelineEngine());
+    rest.setMetadataProvider(mock(IHopMetadataProvider.class));
 
-    try (MockedStatic<ClientBuilder> mockedStatic = Mockito.mockStatic(ClientBuilder.class)) {
-      mockedStatic.when(ClientBuilder::newBuilder).thenReturn(clientBuilder);
+    Object[] outputRow = rest.callRest(new Object[] {"value1", "{\"prefix\":\"a\"}"});
 
-      TransformMeta transformMeta = new TransformMeta();
-      transformMeta.setName("TestRest");
-      PipelineMeta pipelineMeta = new PipelineMeta();
-      pipelineMeta.setName("TestRest");
-      pipelineMeta.addTransform(transformMeta);
+    assertNotNull(outputRow);
+    assertEquals("{\"items\":[]}", outputRow[2]);
 
-      RestMeta meta = new RestMeta();
-      meta.setMethod("LIST");
-      meta.setUrl("http://example.com/api");
-      meta.setBodyField("body");
-      meta.setResultField(new ResultField());
-      meta.getResultField().setFieldName("result");
-
-      RestData data = new RestData();
-      data.config = new ClientConfig();
-      data.mediaType = MediaType.APPLICATION_JSON_TYPE;
-      data.method = "LIST";
-      data.realUrl = "http://example.com/api";
-      data.resultFieldName = "result";
-      data.useBody = true;
-      data.indexOfBodyField = 1;
-
-      IRowMeta inputRowMeta = new RowMeta();
-      inputRowMeta.addValueMeta(new ValueMetaString("field1"));
-      inputRowMeta.addValueMeta(new ValueMetaString("body"));
-      data.inputRowMeta = inputRowMeta;
-
-      Rest rest =
-          spy(new Rest(transformMeta, meta, data, 0, pipelineMeta, spy(new LocalPipelineEngine())));
-      when(rest.createClientBuilder()).thenReturn(clientBuilder);
-      rest.setMetadataProvider(mock(IHopMetadataProvider.class));
-
-      Object[] inputRow = new Object[] {"value1", "{\"prefix\":\"a\"}"};
-      Object[] outputRow = rest.callRest(inputRow);
-
-      assertNotNull(outputRow);
-      assertEquals("{\"items\":[]}", outputRow[2]);
-
-      // The custom verb must reach the client verbatim, carrying the configured body.
-      ArgumentCaptor<Entity> entityCaptor = ArgumentCaptor.forClass(Entity.class);
-      verify(builder, times(1)).method(eq("LIST"), entityCaptor.capture());
-      assertEquals("{\"prefix\":\"a\"}", entityCaptor.getValue().getEntity());
-    }
+    // The custom verb must reach the request line verbatim, carrying the configured body.
+    assertEquals("LIST", FakeHttpClient.captured().getMethod());
+    assertEquals(
+        "{\"prefix\":\"a\"}",
+        EntityUtils.toString(FakeHttpClient.captured().getEntity(), StandardCharsets.UTF_8));
   }
 
   @Test
@@ -214,53 +168,26 @@ class RestCustomMethodTest {
   }
 
   @Test
-  void testApache5ConnectorPutsCustomMethodOnTheWire() throws Exception {
-    // Locks in the connector behaviour the fix relies on for the standalone (no REST connection)
-    // path: Apache HttpClient 5 writes an arbitrary method token straight into the request line.
+  void testFactoryClientPutsCustomMethodOnTheWire() throws Exception {
+    // Locks in the client behaviour the fix relies on, now for both paths at once: every client
+    // the factory produces uses Apache HttpClient 5, which writes an arbitrary method token
+    // straight into the request line. The REST connection used to run on Jersey's default JDK
+    // connector, where the same verb only worked by reflecting into
+    // java.net.HttpURLConnection.method via SET_METHOD_WORKAROUND.
     String url = startEchoServer();
 
-    ClientConfig config = new ClientConfig();
-    config.connectorProvider(new Apache5ConnectorProvider());
-    config.property(ClientProperties.SUPPRESS_HTTP_COMPLIANCE_VALIDATION, true);
-    Client client = ClientBuilder.newBuilder().withConfig(config).build();
+    BasicClassicHttpRequest request = new BasicClassicHttpRequest("LIST", url);
+    request.setEntity(new StringEntity("{}", ContentType.APPLICATION_JSON));
 
-    try (Response response =
-        client
-            .target(url)
-            .request()
-            .method("LIST", Entity.entity("{}", MediaType.APPLICATION_JSON_TYPE))) {
-      assertEquals(200, response.getStatus());
-      assertEquals("LIST", response.readEntity(String.class));
-    } finally {
-      client.close();
-    }
-  }
-
-  @Test
-  void testJdkConnectorPutsCustomMethodOnTheWire() throws Exception {
-    // Same for the REST-connection path, which uses Jersey's default JDK HttpURLConnection
-    // connector. HttpURLConnection.setRequestMethod() only accepts a fixed set of verbs, so this
-    // relies on SET_METHOD_WORKAROUND reflecting into java.net.HttpURLConnection.method. That in
-    // turn needs --add-opens java.base/java.net=ALL-UNNAMED, which the Hop launch scripts (and the
-    // surefire argLine) pass. If this test starts failing with an InaccessibleObjectException, the
-    // --add-opens has gone missing rather than the feature being wrong.
-    String url = startEchoServer();
-
-    Client client =
-        ClientBuilder.newBuilder()
-            .property(HttpUrlConnectorProvider.SET_METHOD_WORKAROUND, true)
-            .property(ClientProperties.SUPPRESS_HTTP_COMPLIANCE_VALIDATION, true)
-            .build();
-
-    try (Response response =
-        client
-            .target(url)
-            .request()
-            .method("LIST", Entity.entity("{}", MediaType.APPLICATION_JSON_TYPE))) {
-      assertEquals(200, response.getStatus());
-      assertEquals("LIST", response.readEntity(String.class));
-    } finally {
-      client.close();
+    try (CloseableHttpClient client = RestClientFactory.createClient(new RestClientSettings())) {
+      String echoedMethod =
+          client.execute(
+              request,
+              response -> {
+                assertEquals(200, response.getCode());
+                return EntityUtils.toString(response.getEntity(), StandardCharsets.UTF_8);
+              });
+      assertEquals("LIST", echoedMethod);
     }
   }
 
